ref(game): change type of ownedDistricts from array to associated-array object
background: a player can only have one districter per district name
in his city
implementation to esiser access and remove its elements

--- a/public/html/game/partials/player.html
+++ b/public/html/game/partials/player.html
@@ -28,7 +28,7 @@
       <td>{{card.type}} </td>
       <td>{{card.cost}} </td>
       <td>
-        <button ng-hide="card.cost > game.gold || game.buildCap == 0 || !game.buildTurn" ng-click="build(card);" class="btn btn-primary btn-sm"> Build </button>
+        <button ng-hide="card.cost > game.gold || game.buildCap == 0 || !game.buildTurn || game.ownedDistricts[card.name]" ng-click="build(card);" class="btn btn-primary btn-sm"> Build </button>
       </td>
       <td>
         <button ng-show="LaboratoryOn" ng-click="discardLab(card)" class="btn btn-primary btn-sm"> Discard </button>
