--- a/public/html/game/partials/warlord.html
+++ b/public/html/game/partials/warlord.html
@@ -32,7 +32,7 @@
           <button ng-show="game.onTurn && game.Warlord &&
                            game.gold >= (card.cost-1) &&
                            player.nickname != game.bishopNickname &&
-                           player.ownedDistricts.length < 8 &&
+                           player.getOwnedDistrctsLength() < 8 &&
                            card.name != 'Keep'" ng-click="destroy(player, card)" class="btn btn-danger btn-sm">Destroy</button>
         </td>
       </tr>
