--- a/public/html/game/partials/player.html
+++ b/public/html/game/partials/player.html
@@ -11,7 +11,8 @@
       <td>{{card.type}} </td>
       <td>{{card.cost}} </td>
       <td>
-        <button ng-show="game.Laboratory && card.name == 'Laboratory'" ng-click="toggleLab()" class="btn btn-primary btn-sm"> Toggle Ability </button>
+        <button ng-show="game.Laboratory && card.name == 'Laboratory'" ng-click="toggleLab()" class="btn btn-primary btn-sm"> Toggle </button>
+        <button ng-show="game.Smithy && card.name == 'Smithy'" ng-disabled="game.gold < 2" ng-click="useSmithy()" class="btn btn-primary btn-sm"> Use </button>
       </td>
     </tr>
   </table>
