feat(deck): add Great Wall

--- a/public/html/game/partials/type_selection.html
+++ b/public/html/game/partials/type_selection.html
@@ -15,8 +15,8 @@
       <td>{{type.type}} </td>
       <td>{{type.color}} </td>
       <td>
-        <button ng-show="HauntedCity" ng-click="chooseHauntedCity(type)" class="btn btn-warning btn-sm">Choose</button>
-        <button ng-show="game.SchoolOfMagic" ng-click="chooseSchoolOfMagic(type)" class="btn btn-warning btn-sm">Choose</button>
+        <button ng-show="HauntedCity" ng-click="chooseHauntedCity(type)" class="btn btn-primary btn-sm">Choose</button>
+        <button ng-show="game.SchoolOfMagic" ng-click="chooseSchoolOfMagic(type)" class="btn btn-primary btn-sm">Choose</button>
       </td>
     </tr>
   </table>
