--- a/public/html/game/partials/player.html
+++ b/public/html/game/partials/player.html
@@ -32,7 +32,7 @@
         <button ng-hide="card.cost > game.gold || game.buildCap == 0 || !game.buildTurn || game.ownedDistricts[card.name]" ng-click="build(card);" class="btn btn-primary btn-sm"> Build </button>
       </td>
       <td>
-        <button ng-show="LaboratoryOn" ng-click="discardLab(card)" class="btn btn-primary btn-sm"> Discard </button>
+        <button ng-show="LaboratoryOn" ng-click="discardLab(card)" class="btn btn-warning btn-sm"> Discard </button>
       </td>
     </tr>
   </table>
