feat(css): attempt to do some css

--- a/public/html/game/partials/basic_actions.html
+++ b/public/html/game/partials/basic_actions.html
@@ -6,7 +6,7 @@
     <button ng-click="takeTwoGold()"  class="btn btn-warning">Take two golds</button>
     <button ng-click="drawTwoCards()" class="btn btn-info">Draw two cards</button>
   </div>
-  <table class="table" style="width: 300px" ng-show="chooseNumber > 0">
+  <table class="table" ng-show="chooseNumber > 0" style="width: auto">
     <tr>
       <th>Name </th>
       <th>Type </th>
