--- a/public/html/game/partials/characters.html
+++ b/public/html/game/partials/characters.html
@@ -6,7 +6,7 @@
     </li>
   </ul>
   <div ng-show="selectCharacter">
-    <table class="table" style="width: 300px">
+    <table class="table" style="width: auto">
       <tr>
         <th>Name </th>
         <th>Rank </th>
