--- a/public/html/game/partials/magician.html
+++ b/public/html/game/partials/magician.html
@@ -1,5 +1,5 @@
 <div ng-show="game.Magician">
-  <table class="table" style="width: 300px" ng-hide="chooseExchangeCards">
+  <table class="table" ng-hide="chooseExchangeCards" style="width: auto">
     <th>Player </th>
     <th>No. of cards </th>
     <th></th>
@@ -16,7 +16,7 @@
       </td>
     </tr>
   </table>
-  <table class="table" style="width: 300px" ng-show="chooseExchangeCards">
+  <table class="table" ng-show="chooseExchangeCards" style="width: auto">
     <tr>
       <th>Name </th>
       <th>Type </th>
