--- a/public/html/game/partials/thief.html
+++ b/public/html/game/partials/thief.html
@@ -1,6 +1,6 @@
 <div ng-show="game.Thief">
   Thief <br>
-  <table class="table" style="width: 300px">
+  <table class="table" style="width: auto">
     <th>Name </th>
     <th>Rank </th>
     <th></th>
