--- a/public/html/game/partials/type_selection.html
+++ b/public/html/game/partials/type_selection.html
@@ -7,7 +7,7 @@
           {type: 'Special', color: 'Purple'},
         ];">
   Choose color <br>
-  <table class="table" style="width: 300px">
+  <table class="table" style="width: auto">
     <th>Type </th>
     <th>Color </th>
     <th></th>
