--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="http://localhost:5000/js/boot.js"></script>
 
   <link type="text/css" href="http://localhost:5000/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+  <link type="text/css" href="http://localhost:5000/css/game.css" rel="stylesheet">
 </head>
 <body >
   <div ui-view="root1"></div>
