--- a/public/html/game/partials/assassin.html
+++ b/public/html/game/partials/assassin.html
@@ -1,6 +1,6 @@
 <div ng-show="game.Assassin">
   <h4>Assassin</h4>
-  <table class="table" style="width: 300px">
+  <table class="table" style="width: auto">
     <th>Name </th>
     <th>Rank </th>
     <th></th>
