--- a/public/html/game/partials/warlord.html
+++ b/public/html/game/partials/warlord.html
@@ -1,8 +1,8 @@
 <div class="container" ng-show="Graveyard">
   <h3>Graveyard</h3>
   You may pay one gold to take the the destroyed district into your hand <br>
-  <table class="table" style="width: 300px">
-    <tr popover="{{destroyedCard.description}}" popover-trigger="mouseenter">
+  <table class="table" style="width: auto">
+    <tr popover="{{destroyedCard.description}}" popover-trigger="click">
       <td>{{destroyedCard.name}} </td>
       <td>{{destroyedCard.type}} </td>
       <td>{{destroyedCard.cost}} </td>
@@ -18,14 +18,14 @@
     Gold {{player.gold}} <br>
     Number of District Cards {{player.numberOfDistrictCards}} cards <br>
     Owned Districts
-    <table class="table" style="width: 300px">
+    <table class="table" style="width: auto">
       <tr>
         <th>Name </th>
         <th>Type </th>
         <th>Cost </th>
         <th ng-show="game.onTurn && game.Warlord">Destroy</th>
       </tr>
-      <tr ng-repeat="card in player.ownedDistricts" popover="{{card.description}}" popover-trigger="mouseenter">
+      <tr ng-repeat="card in player.ownedDistricts" popover="{{card.description}}" popover-trigger="click">
         <td>{{card.name}} </td>
         <td>{{card.type}} </td>
         <td>{{card.cost}} </td>
