--- a/public/html/game/partials/magician.html
+++ b/public/html/game/partials/magician.html
@@ -22,7 +22,7 @@
       <th>Type </th>
       <th>Cost </th>
     </tr>
-    <tr ng-repeat="card in game.districtHand track by $index" >
+    <tr ng-repeat="card in game.districtHand track by $index" popover="{{card.description}}" popover-trigger="click">
       <td>{{card.name}} </td>
       <td>{{card.type}} </td>
       <td>{{card.cost}} </td>
